MET-1420 migrated run dev command to Gradle